retrieveUnpackaged/objects/MUSW__Bluebeam_File_Setting__mdt.object
<CustomObject>
    <description>Configures the fields in the Bluebeam enabled file object (i.e. Submission) for use by the Bluebeam API</description>
    <fields>
        <fullName>MUSW__Bluebeam_Submission_Date_API_Name__c</fullName>
        <description>The API name of the field that is updated when the submission file(s) is uploaded.</description>
        <inlineHelpText>The API name of the field that is updated when the submission file(s) is uploaded.</inlineHelpText>
        <label>Bluebeam_Submission Date API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Filename_Field_API_Name__c</fullName>
        <description>The API name of the field that is updated with the upload submission file names</description>
        <inlineHelpText>The API name of the field that is updated with the upload submission file names</inlineHelpText>
        <label>Filename Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Object_API_Name__c</fullName>
        <description>The unique name to use to filter for the relevant record</description>
        <label>Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bluebeam File Setting</label>
    <pluralLabel>Bluebeam File Settings</pluralLabel>
</CustomObject>